<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/pizza_close"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.vijaya.myorder.MainActivity">

        <EditText
            android:id="@+id/user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:theme="@style/itemBackground"
            android:inputType="textCapWords" />

        <TextView
            style="@style/HeaderTextStyle"
            android:theme="@style/itemBackground"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/extra_cheese_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:background="#66FFFFFF"
            android:paddingLeft="24dp"
            android:text="@string/extra_cheese"
            android:textSize="16sp"
            android:theme="@style/itemBackground" />

        <CheckBox
            android:id="@+id/pepperoni_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:background="#66FFFFFF"
            android:paddingLeft="24dp"
            android:text="@string/pepperoni"
            android:textSize="16sp"
            android:theme="@style/itemBackground" />

        <CheckBox
            android:id="@+id/hawaiian_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:background="#66FFFFFF"
            android:paddingLeft="24dp"
            android:text="@string/hawaiian"
            android:textSize="16sp"
            android:theme="@style/itemBackground" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/HeaderTextStyle"
                    android:layout_height="wrap_content"
                    android:text="@string/crust"
                    android:theme="@style/itemBackground" />

                <Spinner
                    android:id="@+id/crust_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/itemBackground"
                    android:entries="@array/crust_array"
                    android:popupBackground="#66FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/HeaderTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/itemBackground"
                    android:text="@string/size" />

                <Spinner
                    android:id="@+id/size_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/size_array"
                    android:persistentDrawingCache="all"
                    android:popupBackground="#66FFFFFF"
                    android:theme="@style/itemBackground"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:theme="@style/itemBackground"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:theme="@style/itemBackground"
                android:text="@string/initial_quantity_value" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sumButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="orderSummaryPage"
                android:text="Summary" />

            <Button
                android:id="@+id/orderButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="submitOrder"
                android:text="Order" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>